--- a/beard-science/views/index.hbs
+++ b/beard-science/views/index.hbs
@@ -1,2 +1,13 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<a-scene>
+
+    <a-assets>
+        <a-asset-item id="bird" src="models/bird.dae"></a-asset-item>
+    </a-assets>
+
+    <a-collada-model id="bird-entity" src="#bird" position="0 0 -5" scale="10 10 10"></a-collada-model>
+
+    <a-entity camera look-controls wasd-controls></a-entity>
+
+    <a-sky color="#00f"></a-sky>
+
+</a-scene>
