--- a/beard-science/views/layout.hbs
+++ b/beard-science/views/layout.hbs
@@ -3,8 +3,14 @@
   <head>
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script src="https://aframe.io/releases/0.2.0/aframe.min.js"></script>
   </head>
   <body>
+    <script src="jspm_packages/system.js"></script>
+    <script src="config.js"></script>
+    <script>
+      System.import('js/main');
+    </script>
     {{{body}}}
   </body>
 </html>
